# 108-Final-Project

./: main.py  pyproject.toml
instance/: project.db  project1.db  project2.db
static/: app.js  askQuestion.css  index.css  library.css  login_signup.css  myAnswers.css  myQuestions.css  profile.css  questionAndAnswers.css  searchingResult.css  settings.css
templates/: askQuestion.html  createComment.html  createQuestion.html  createUser.html  index.html  library.html  login.html  myAnswers.html  myQuestions.html  profile.html  questionAndAnswers.html  searchingResult.html  settings.html  signup.html  userhome.html  writeArticle.html
